force-app/main/default/objects/Quality_Check_Entry__c/Quality_Check_Entry__c.object-meta.xml
<CustomObject>
    <label>Quality Check Entry</label>
    <nameField>
        <displayFormat>QCE-{0000000}</displayFormat>
        <label>Quality Check Machine Entry Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Quality Check Entries</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>