force-app/main/default/objects/Quality_Check_Entry__c/fields/Beverage__c.field-meta.xml
<CustomField>
    <fullName>Beverage__c</fullName>
    <label>Beverage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Espresso</fullName>
            </value>
            <value>
                <fullName>Cappuccino</fullName>
            </value>
            <value>
                <fullName>Latte Macchiato</fullName>
            </value>
            <value>
                <fullName>Cafe Creme</fullName>
            </value>
            <value>
                <fullName>Milchkaffee</fullName>
            </value>
            <value>
                <fullName>Filter coffee</fullName>
            </value>
            <value>
                <fullName>Cocaya</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>