force-app/main/default/objects/Quality_Check_Entry__c/fields/Flavor_Rating__c.field-meta.xml
<CustomField>
    <fullName>Flavor_Rating__c</fullName>
    <label>Flavor Rating</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>