force-app/main/default/objects/Quality_Check_Entry__c/fields/Machine__c.field-meta.xml
<CustomField>
    <fullName>Machine__c</fullName>
    <formula>Quality_Check_Machine__r.MachineNameModel__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Machine</label>
    <type>Text</type>
</CustomField>