force-app/main/default/objects/Quality_Check_Entry__c/fields/OtherProduct__c.field-meta.xml
<CustomField>
    <fullName>OtherProduct__c</fullName>
    <label>Other Product</label>
    <length>255</length>
    <type>Text</type>
</CustomField>