force-app/main/default/objects/Quality_Check_Entry__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <label>Product</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Alberto Caffè Crema</fullName>
            </value>
            <value>
                <fullName>Alfredo Caffè</fullName>
            </value>
            <value>
                <fullName>Alfredo Espresso Cremazzurro</fullName>
            </value>
            <value>
                <fullName>Alfredo Espresso Decaffeinato</fullName>
            </value>
            <value>
                <fullName>Alfredo Espresso FT Futuro</fullName>
            </value>
            <value>
                <fullName>Alfredo Espresso Primus Omnium</fullName>
            </value>
            <value>
                <fullName>Alfredo Espresso Super Bar</fullName>
            </value>
            <value>
                <fullName>Alfredo Espresso Tipo Bar</fullName>
            </value>
            <value>
                <fullName>Burkhof Bio FT Café Crema</fullName>
            </value>
            <value>
                <fullName>Burkhof Bio FT Espresso</fullName>
            </value>
            <value>
                <fullName>Burkhof Café Crème Original</fullName>
            </value>
            <value>
                <fullName>Burkhof Casino Royal</fullName>
            </value>
            <value>
                <fullName>Burkhof Espresso Classico</fullName>
            </value>
            <value>
                <fullName>Burkhof Espresso Speciale</fullName>
            </value>
            <value>
                <fullName>Burkhof Grand Gourmet Spezial</fullName>
            </value>
            <value>
                <fullName>Burkhof Herzfreund Entcoff.</fullName>
            </value>
            <value>
                <fullName>Burkhof Hochland</fullName>
            </value>
            <value>
                <fullName>Burkhof Luxus</fullName>
            </value>
            <value>
                <fullName>Burkhof Melange Bavaria</fullName>
            </value>
            <value>
                <fullName>Burkhof Savoy Café Créme</fullName>
            </value>
            <value>
                <fullName>Burkhof Wiener Mokka</fullName>
            </value>
            <value>
                <fullName>Café Bistro Vending</fullName>
            </value>
            <value>
                <fullName>Café Int. Bio Fino Espresso</fullName>
            </value>
            <value>
                <fullName>Café Int. Bio FT Gustoso Café Crème</fullName>
            </value>
            <value>
                <fullName>Café Int. especiál Bio FT Espresso</fullName>
            </value>
            <value>
                <fullName>Café Int. FT Crema Bio Fino</fullName>
            </value>
            <value>
                <fullName>Café Int. FT Espr. Bio Gustoso</fullName>
            </value>
            <value>
                <fullName>Café Intención Bio Crema Aromatico FT</fullName>
            </value>
            <value>
                <fullName>Café Intención Bio Espr. Intensivo FT</fullName>
            </value>
            <value>
                <fullName>Café Intención Café Crème</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>