force-app/main/default/objects/Quality_Check_Entry__c/fields/ProductName__c.field-meta.xml
<CustomField>
    <fullName>ProductName__c</fullName>
    <formula>IF(
    NOT(ISBLANK(OtherProduct__c)),
    OtherProduct__c,
    TEXT(Product__c)
)</formula>
    <label>Product Name</label>
    <type>Text</type>
</CustomField>