force-app/main/default/objects/Quality_Check_Entry__c/fields/Quality_Check_Machine__c.field-meta.xml
<CustomField>
    <fullName>Quality_Check_Machine__c</fullName>
    <label>Quality Check Machine</label>
    <referenceTo>Quality_Check_Machine__c</referenceTo>
    <relationshipLabel>Quality Check Entrie</relationshipLabel>
    <relationshipName>Quality_Check_Entrie</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>