force-app/main/default/objects/Quality_Check_Entry__c/fields/QualityCheckID__c.field-meta.xml
<CustomField>
    <fullName>QualityCheckID__c</fullName>
    <formula>CASESAFEID(Quality_Check_Machine__r.Quality_Check__r.Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Quality Check ID</label>
    <type>Text</type>
</CustomField>