force-app/main/default/objects/Quality_Check_Entry__c/fields/RecommendationImprovement__c.field-meta.xml
<CustomField>
    <fullName>RecommendationImprovement__c</fullName>
    <label>Recommendation / Improvement</label>
    <length>255</length>
    <type>Text</type>
</CustomField>