force-app/main/default/objects/Quality_Check_Entry__c/fields/Visual_Rating__c.field-meta.xml
<CustomField>
    <fullName>Visual_Rating__c</fullName>
    <label>Visual Rating</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>